styles/Home.module.scss
@import "variables.module";

.container {
  padding: 40px 8vw;
}

#hero {
  .container {
    // min-height: 92vh;
    padding-top: 6vh;
    position: relative;
  }
  text-align: center !important;
  .hero_img {
    padding-top: 30px;
  }
}

#miedos {
  text-align: center !important;
  background-color: $accent-color;
  h2,
  p {
    color: white;
  }

  p {
    margin: auto;
    width: 80%;
  }
  img {
    width: 50%;
    margin-bottom: 30px;
    box-shadow: rgba(56, 56, 57, 0.8) 0px 0px 29px 0px;
    border-radius: 100px;
  }
  .miedos_elements {
    padding-top: 20px;
    display: flex;
    flex-direction: column;
    gap: 40px;
  }
}

#deseos {
  text-align: center;
  h2 {
    color: $dark-blue;
  }
  img {
    width: 85%;
    padding-bottom: 5px;
  }
  p {
    margin: auto;
    width: 70%;
  }
  .deseos_elements {
    padding-top: 20px;
    display: flex;
    flex-direction: column;
    gap: 20px;
  }
}

#quien_soy {
  position: relative;

  overflow: hidden;
  // background-color: black;
  .container {
    display: flex;
    width: 100%;
    flex-direction: column;
    align-items: flex-start;
    justify-content: flex-end;

    min-height: 900px;
  }
  h2 {
    font-size: 50px;
    margin-bottom: 0%;
    color: white !important;
    font-family: "Akira Expanded", Arial, Helvetica, sans-serif;
  }
  p {
    line-height: 120%;
    color: white;
  }
  p.last {
    margin-bottom: 0%;
  }
  img {
    position: absolute;
    top: 0%;
    left: 0%;
    height: 100%;
    width: 100%;
    object-fit: cover;
    z-index: -1;
  }
}

#propuesta {
  background-color: $black-alt;
  text-align: center;
  h2 {
    font-size: 22px;
    color: white;
  }
  .img_slider_sec {
    padding: 10px;
  }
  .main_slider {
    padding-bottom: 20px;
    button {
      display: none !important;
    }
  }
  .secondary_slider {
    padding-bottom: 30px;
    button {
      box-shadow: none !important;
    }
    .slick-prev,
    .slick-next {
      color: white !important;
    }
    .slick-prev:before,
    .slick-next:before {
      background-color: white !important;
    }
  }
  button {
    margin: auto;
    font-size: 24px;
  }
}

#testimonios {
  overflow: hidden;
  position: relative;
  text-align: center;
  h2 {
    color: white;
    font-size: 33px;
  }

  .testimonios_elements {
    #mobile{

      display: flex;
      flex-direction: column;
      gap: 50px;
      // padding-bottom: 40px;
    }
  }
  .testimonio_element {
    margin-bottom: 40px;
    box-shadow: rgba(100, 100, 111, 0.6) 0px 0px 29px 0px;
    padding: 10px 30px;
    border-radius: 40px;
    background-color: $accent-color;
    color: white !important;
    h3 {
      font-size: 13px;
      font-family: "Akira Expanded", Verdana, Geneva, Tahoma, sans-serif;
    }
    p {
      font-size: 14px;
      line-height: 140%;
      color: white;
    }
  }
  img {
    position: absolute;
    top: 0%;
    left: 0%;
    height: 100%;
    width: auto;
    // object-fit: cover;

    z-index: -1;
  }
}

#lead_magnet {
  background-color: $accent-color;
  h2 {
    font-family: "Akira Expanded", Verdana, Geneva, Tahoma, sans-serif;
    font-size: 24px;
    // color: black;
    color: white;
  }
  button {
    background-color: white;
    text-transform: uppercase;
    font-family: "Akira Expanded", Verdana, Geneva, Tahoma, sans-serif;
    color: black;
    font-size: 20px;
  }
}

#hero_footer {
  position: relative;
  text-align: end;
  h2 {
    font-size: clamp(1.75rem, 0.1944rem + 7.7778vw, 2.625rem);
    margin-bottom: 0;
    margin-bottom: 3vh;
  }
  p {
    font-size: clamp(1rem, 0.3333rem + 3.3333vw, 1.375rem);
    margin: 0;
  }
  img {
    display: block;
    margin: 0;
    padding: 0;
    transform: scale(1.01);
  }
  button{
    margin-top: 3.7vh;
  }
}

@media (min-width: 768px) {
  .container{
  padding: 90px 8vw;

  }
  #hero {
    // height: 95vh;
    width: 100%;
    .container {
      height: 95vh;

      position: relative;
      text-align: left;
      display: flex;
      width: 100%;
      padding-top: 7vh;

      .hero_text {
      }
      h1 {
        margin-top: 0vh;
        // width: 80%;
        // 40px a 75px
        font-size: clamp(2.5rem, 1.0417rem + 3.0382vw, 4.5rem);
        margin-bottom: 0px;
      }
      p {
        margin-top: 3vh;
        // width: 85%;
        // 30 a 45px
        font-size: clamp(1.875rem, 1.25rem + 1.3021vw, 2.1125rem);
      }
      button {
        padding: 20px 45px;
        // 22 a 35
        font-size: clamp(1.275rem, 0.8333rem + 1.1285vw, 1.3875rem);
      }
    }
    .hero_img {
      img {
        margin: auto;
        // margin-right: 30px;
      }
      width: 43%;
      position: absolute;
      right: 2%;
      bottom: 2%;
      display: flex;
      // justify-content: end;
      align-items: flex-end;
    }
  }
  #miedos {
    p {
      font-size: clamp(1.125rem, 0.875rem + 0.5208vw, 1.5rem);
      line-height: 130%;
      margin: auto;
      width: 70%;
    }
    h2 {
      font-size: clamp(1.875rem, 1.4583rem + 0.8681vw, 2.5rem);
    }

    img {
      width: 55%;
      // height: 200px;
      // width: 200px;

      padding-bottom: 6px;
      margin: 20px 0px;
    }
    .miedos_elements {
      // padding-top: 30px;
      // width: 70%;
      display: flex;
      flex-direction: row;
      justify-content: center;

      gap: 20px;
    }
    .miedo_element {
      width: 33%;
      // display: flex;
      // flex-direction: row;
      // justify-content: center;

      // gap: 20px;
    }
  }

  #deseos {
    h2 {
      font-size: clamp(1.875rem, 1.4583rem + 0.8681vw, 2.5rem);
    }
    img {
      width: 90%;
      padding-bottom: 2vh;
    }

    p {
      font-size: clamp(1.125rem, 0.875rem + 0.5208vw, 1.5rem);
    }
    .deseos_elements {
      margin-left: auto;
      display: flex;
      flex-direction: row;
      justify-content: center;
      gap: 20px;
    }
    .deseos_element{
      width: 33%;
    }
  }

  #quien_soy {
    .container {
      display: flex;
      width: 50%;
      flex-direction: column;
      align-items: flex-start;
      justify-content: center;


      margin: auto;
      width: 100%;
      // max-width: 1500px;

      min-height: 100vh;
    }
    h2 {
      font-size: clamp(3.125rem, 2.0917rem + 1.4361vw, 3.675rem);
      margin-bottom: 0%;
      color: white !important;
      font-family: "Akira Expanded", Arial, Helvetica, sans-serif;
    }
    p {
      font-size: clamp(1.125rem, 0.7733rem + 0.6076vw, 1.5625rem);
      line-height: 120%;
      color: white;
    }
    p.last {
      margin-bottom: 0%;
    }
    img {
      position: absolute;
      top: 0%;
      left: 0%;
      height: 100%;
      width: 100%;
      object-fit: cover;
      z-index: -1;
    }
  }
  #propuesta {
    .container {
      padding-top: 7vh;
      padding-bottom: 7vh;
      margin: auto;
      max-width: 1300px;
    }
    .propuesta_hero {
      display: flex;
      flex-direction: row-reverse;
      gap: 5%;
      button {
        font-size: 25px;
        padding: 20px 50px;
    margin: 0;

      }
    }
    .main_slider {
      width: 50%;
    }
    .propuesta_title {
      text-align: start;
      display: flex;
      flex-direction: column;
      justify-content: center;
      align-items: flex-start;
    }
    h2 {
      font-size: clamp(2.0625rem, 1.7708rem + 0.6076vw, 2.5rem);
    }
    .secondary_slider{
      padding-bottom: 0px;
    }
  }

  #testimonios {
    h2 {
      color: white;
      font-size: 53px;
    }
    .container{
      margin: auto;
      max-width: 1500px;
    }

    .testimonios_elements {
      display: flex;
      flex-direction: column;
      gap: 50px;
      padding-bottom: 40px;
      width: 70%;
      margin: auto;
    }
    .testimonio_element {
    margin-bottom: 0px;

      // margin: 50px;
      // margin-left: 20px;
      box-shadow: none;
      padding: 60px 30px;
      border-radius: 40px;
      background-color: $accent-color;
      color: white !important;
      h3 {
        font-size: 23px;
        font-family: "Akira Expanded", Verdana, Geneva, Tahoma, sans-serif;
      }
      p {
        padding-top: 30px;
        // padding-bottom: 30px;
        margin: auto;
        width: 70%;
        font-size: clamp(1.625rem, 1.2917rem + 0.6944vw, 2.125rem);
        line-height: 120%;
        color: white;
      }
    }
    img {
      position: absolute;
      top: 0%;
      left: 0%;
      height: 100%;
      width: 100%;
      object-fit: cover;
      transform: scale(1.01);

      z-index: -1;
    }
  }
  #lead_magnet {
    background-color: $accent-color;
    .container {
      display: flex;
      justify-content: space-between;
      align-items: center;
      gap: 10%;
      padding-top: 8vh;
      padding-bottom: 8vh;
    }
    h2 {
      font-family: "Akira Expanded", Verdana, Geneva, Tahoma, sans-serif;
      font-size: clamp(1.5625rem, 0.9375rem + 1.3021vw, 2.5rem);
      margin-bottom: 0;
      // color: black;
      color: white;
    }
    button {
      background-color: white;
      text-transform: uppercase;
      font-family: "Akira Expanded", Verdana, Geneva, Tahoma, sans-serif;
      color: black;
      font-size: 27px;
      padding: 25px 40px;
      box-shadow: rgba(61, 61, 65, 0.9) 0px 0px 29px 0px !important;
    }
  }
  #hero_footer {
    position: relative;
    text-align: end;
    .container {
      height: 90vh;
    }
    h2 {
      margin: auto;
      margin-right: 0;
      margin-top: 3vh;
      width: 60%;
      // 40px a 75px
      font-size: clamp(2.5rem, 1.0417rem + 3.0382vw, 4rem);

      margin-bottom: 0px;
    }
    p {
      margin: auto;
      margin-right: 0;
      margin-bottom: 3vh;
      margin-top: 3vh;
      width: 55%;
      // 30 a 45px
      font-size: clamp(1.875rem, 1.25rem + 1.3021vw, 2.1125rem);
    }
    button {
      padding: 20px 45px;
      // 22 a 35
      font-size: clamp(1.3735rem, 0.8333rem + 1.1285vw, 1.675rem);
    }
    img {
      position: absolute;
      left: -4px;
      bottom: 0%;
      width: 50%;
      display: block;
      margin: 0;
      padding: 0;
      transform: scale(1);
    }
  }
}
@media (min-width: 2400px) {
  #propuesta {
    .container {
      margin: auto;
      max-width: 1700px;
    }
  }
}

